docker/validator/test/negative-probes/parse_error.js
// @expectedRule PARSE_ERROR
// Deliberate syntax error: mismatched braces.
export default function generate(THREE) {
  const group = new THREE.Group(;
  return group;
}
